// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordChangeForm does not submit when password is not provided 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-16 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
        data-shrink="false"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-fullWidth-45 MuiInput-fullWidth-30 MuiInputBase-formControl-37 MuiInput-formControl-24"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-46 MuiInput-input-31 MuiInputBase-inputType-49 MuiInput-inputType-34"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-16 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
        data-shrink="false"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-fullWidth-45 MuiInput-fullWidth-30 MuiInputBase-formControl-37 MuiInput-formControl-24"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-46 MuiInput-input-31 MuiInputBase-inputType-49 MuiInput-inputType-34"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-16 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
        data-shrink="false"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-fullWidth-45 MuiInput-fullWidth-30 MuiInputBase-formControl-37 MuiInput-formControl-24"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-46 MuiInput-input-31 MuiInputBase-inputType-49 MuiInput-inputType-34"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-53 SubmitButton-submitInPage-56"
    >
      <button
        class="MuiButtonBase-root-83 MuiButton-root-57 MuiButton-contained-68 MuiButton-containedPrimary-69 MuiButton-raised-71 MuiButton-raisedPrimary-72"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-58"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-86"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordChangeForm submits when password is provided at least 6 characters 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-246 MuiFormControl-marginNormal-247 MuiFormControl-fullWidth-249"
    >
      <label
        class="MuiFormLabel-root-261 MuiInputLabel-root-250 MuiInputLabel-formControl-255 MuiInputLabel-animated-258"
        data-shrink="false"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-281 MuiInput-root-268 MuiInput-underline-272 MuiInputBase-fullWidth-290 MuiInput-fullWidth-275 MuiInputBase-formControl-282 MuiInput-formControl-269"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-291 MuiInput-input-276 MuiInputBase-inputType-294 MuiInput-inputType-279"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value="abc"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-246 MuiFormControl-marginNormal-247 MuiFormControl-fullWidth-249"
    >
      <label
        class="MuiFormLabel-root-261 MuiInputLabel-root-250 MuiInputLabel-formControl-255 MuiInputLabel-animated-258"
        data-shrink="false"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-281 MuiInput-root-268 MuiInput-underline-272 MuiInputBase-fullWidth-290 MuiInput-fullWidth-275 MuiInputBase-formControl-282 MuiInput-formControl-269"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-291 MuiInput-input-276 MuiInputBase-inputType-294 MuiInput-inputType-279"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value="xyzxyz9"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-246 MuiFormControl-marginNormal-247 MuiFormControl-fullWidth-249"
    >
      <label
        class="MuiFormLabel-root-261 MuiInputLabel-root-250 MuiInputLabel-formControl-255 MuiInputLabel-animated-258"
        data-shrink="false"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-281 MuiInput-root-268 MuiInput-underline-272 MuiInputBase-fullWidth-290 MuiInput-fullWidth-275 MuiInputBase-formControl-282 MuiInput-formControl-269"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-291 MuiInput-input-276 MuiInputBase-inputType-294 MuiInput-inputType-279"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value="xyzxyz9"
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-298 SubmitButton-submitInPage-301"
    >
      <button
        class="MuiButtonBase-root-328 MuiButton-root-302 MuiButton-contained-313 MuiButton-containedPrimary-314 MuiButton-raised-316 MuiButton-raisedPrimary-317"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-303"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-331"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordChangeForm submits when password is provided at least 6 characters: x 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-93 MuiFormControl-marginNormal-94 MuiFormControl-fullWidth-96"
    >
      <label
        class="MuiFormLabel-root-108 MuiInputLabel-root-97 MuiInputLabel-formControl-102 MuiInputLabel-animated-105"
        data-shrink="false"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-128 MuiInput-root-115 MuiInput-underline-119 MuiInputBase-fullWidth-137 MuiInput-fullWidth-122 MuiInputBase-formControl-129 MuiInput-formControl-116"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-138 MuiInput-input-123 MuiInputBase-inputType-141 MuiInput-inputType-126"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-93 MuiFormControl-marginNormal-94 MuiFormControl-fullWidth-96"
    >
      <label
        class="MuiFormLabel-root-108 MuiInputLabel-root-97 MuiInputLabel-formControl-102 MuiInputLabel-animated-105"
        data-shrink="false"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-128 MuiInput-root-115 MuiInput-underline-119 MuiInputBase-fullWidth-137 MuiInput-fullWidth-122 MuiInputBase-formControl-129 MuiInput-formControl-116"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-138 MuiInput-input-123 MuiInputBase-inputType-141 MuiInput-inputType-126"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-93 MuiFormControl-marginNormal-94 MuiFormControl-fullWidth-96"
    >
      <label
        class="MuiFormLabel-root-108 MuiInputLabel-root-97 MuiInputLabel-formControl-102 MuiInputLabel-animated-105"
        data-shrink="false"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-128 MuiInput-root-115 MuiInput-underline-119 MuiInputBase-fullWidth-137 MuiInput-fullWidth-122 MuiInputBase-formControl-129 MuiInput-formControl-116"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-138 MuiInput-input-123 MuiInputBase-inputType-141 MuiInput-inputType-126"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-145 SubmitButton-submitInPage-148"
    >
      <button
        class="MuiButtonBase-root-175 MuiButton-root-149 MuiButton-contained-160 MuiButton-containedPrimary-161 MuiButton-raised-163 MuiButton-raisedPrimary-164"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-150"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-178"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordChangeForm submits when password is provided at least 6 characters: y 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-93 MuiFormControl-marginNormal-94 MuiFormControl-fullWidth-96"
    >
      <label
        class="MuiFormLabel-root-108 MuiInputLabel-root-97 MuiInputLabel-formControl-102 MuiInputLabel-animated-105"
        data-shrink="false"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-128 MuiInput-root-115 MuiInput-underline-119 MuiInputBase-fullWidth-137 MuiInput-fullWidth-122 MuiInputBase-formControl-129 MuiInput-formControl-116"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-138 MuiInput-input-123 MuiInputBase-inputType-141 MuiInput-inputType-126"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-93 MuiFormControl-marginNormal-94 MuiFormControl-fullWidth-96"
    >
      <label
        class="MuiFormLabel-root-108 MuiInputLabel-root-97 MuiInputLabel-formControl-102 MuiInputLabel-animated-105"
        data-shrink="false"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-128 MuiInput-root-115 MuiInput-underline-119 MuiInputBase-fullWidth-137 MuiInput-fullWidth-122 MuiInputBase-formControl-129 MuiInput-formControl-116"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-138 MuiInput-input-123 MuiInputBase-inputType-141 MuiInput-inputType-126"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-93 MuiFormControl-marginNormal-94 MuiFormControl-fullWidth-96"
    >
      <label
        class="MuiFormLabel-root-108 MuiInputLabel-root-97 MuiInputLabel-formControl-102 MuiInputLabel-animated-105"
        data-shrink="false"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-128 MuiInput-root-115 MuiInput-underline-119 MuiInputBase-fullWidth-137 MuiInput-fullWidth-122 MuiInputBase-formControl-129 MuiInput-formControl-116"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-138 MuiInput-input-123 MuiInputBase-inputType-141 MuiInput-inputType-126"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-145 SubmitButton-submitInPage-148"
    >
      <button
        class="MuiButtonBase-root-175 MuiButton-root-149 MuiButton-contained-160 MuiButton-containedPrimary-161 MuiButton-raised-163 MuiButton-raisedPrimary-164"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-150"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-178"
        />
      </button>
    </div>
  </form>
</div>
`;
